--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ set (Tutorial_VERSION_MINOR 001)
 # configure a header file to pass some of the CMake settings
 # to the source code
 configure_file (
-  "${PROJECT_SOURCE_DIR}/TutorialConfig.hpp.in"
-  "${PROJECT_BINARY_DIR}/TutorialConfig.hpp"
+  "${PROJECT_SOURCE_DIR}/inc/TutorialConfig.hpp.in"
+  "${PROJECT_BINARY_DIR}/inc/TutorialConfig.hpp"
   )
 
 # add the binary tree to the search path for include files
