--- a/mathFunctions/CMakeLists.txt
+++ b/mathFunctions/CMakeLists.txt
@@ -1,1 +1,3 @@
 add_library (mathFunctions mysqrt.cxx)
+#install (TARGETS mathFunctions/mathFunctions.hpp DESTINATION bin)
+#install (FILES mathFunctions.hpp DESTINATION include)
