Hello world added. working and building fine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,5 @@
-cmake_minimum_required (VERSION 2.6)
-project (Tutorial)
-#add_executable (Tutorial tutor.cxx)
-#The version number.
 
-set (Tutorial_VERSION_MAJOR 1)
-set (Tutorial_VERSION_MINOR 001)
-
-# configure a header file to pass some of the CMake settings
-# to the source code
-configure_file (
-  "${PROJECT_SOURCE_DIR}/TutorialConfig.hpp.in"
-  "${PROJECT_BINARY_DIR}/TutorialConfig.hpp"
-  )
-
-# add the binary tree to the search path for include files
-# so that we will find TutorialConfig.hpp
-include_directories("${PROJECT_BINARY_DIR}")
-
-#Add executable
-add_executable(Tutorial src/tutor.cxx)
+#https://github.com/ttroy50/cmake-examples/tree/master/01-basic/A-hello-cmake
+cmake_minimum_required(VERSION 3.5)
+project (hello_cmake)
+add_executable (hello_cmake_exec src/main.cpp)
