--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,14 @@
 
-#https://github.com/ttroy50/cmake-examples/tree/master/01-basic/A-hello-cmake
+#https://github.com/ttroy50/cmake-examples/tree/master/01-basic/B-hello-headers
 cmake_minimum_required(VERSION 3.5)
-project (hello_cmake)
-add_executable (hello_cmake_exec src/main.cpp)
+project (hello_cmakeHeaders)
+
+# Create a sources variable with a link to all cpp files to compile
+set(SOURCES src/main.cpp src/salut.cpp)
+
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+target_include_directories(${PROJECT_NAME}
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/inc
+    )
