changed default installation path. also can test-run: make install DESTDIR=${PWD}/TESTinstall

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@
 cmake_minimum_required(VERSION 3.5)
 project (helloCmakeInstall)
 
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+	message (STATUS "Setting default CMAKE_INSTALL_PREFIX path to ${CMAKE_BINARY_DIR}/makeInstall")
+	set (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/makeInstall" CACHE STRING "The path to use for make install" FORCE)
+endif()
+
 ############################################################
 # Create a library
 ############################################################
