--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,36 @@
 
-# https://github.com/ttroy50/cmake-examples/tree/master/01-basic/G-compile-flags
-#	CMake supports setting compile flags in a number of different ways:
-#	using target_compile_definitions() function using the CMAKE_C_FLAGS and CMAKE_CXX_FLAGS variables.
-
+# https://github.com/ttroy50/cmake-examples/tree/master/01-basic/H-third-party-library
+# Using third party libraries.
+# exported variables:
+#	XXX_FOUND
+#	xxx_INCLUDE_DIRS - pointing to the include directory of the lib
+#	xxx_LIBRARY - A variable pointing to the library path.
 cmake_minimum_required(VERSION 3.5)
 
-# Set a default C++ compile flag
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DEX2" CACHE STRING "Set C++ Compiler Flags" FORCE)
+find_package(Boost 1.46.1 REQUIRED COMPONENTS filesystem system)
 
-# Set the project name
-project (compile_flags)
+# Do stuff if Lib pack was found:
+if (Boost_FOUND)
+	message ("boost Lib found")
+	include_directories ($Boost_INCLUDE_DIRS)
+else()
+	message (FATAL_ERROR "Cannot find boost Lib")
+endif()
 
-# Add an executable
-add_executable(cmake_examples_compile_flags src/noDepend.cpp)
+# Add exec
+add_executable (thirdPartyIncludeExec src/boostDepend.cpp)
 
-target_compile_definitions(cmake_examples_compile_flags
-    PRIVATE EX3
-	)
+target_link_libraries (thirdPartyIncludeExec
+	PRIVATE
+	Boost::filesystem)
+
+# Include boost Headers
+target_include_directories (thirdPartyIncludeExec
+	PRIVATE
+	${Boost_INCLUDE_DIRS})
+
+# lINK against boost lib:
+target_link_libraries (thirdPartyIncludeExec
+	PRIVATE
+	${Boost_SYSTEM_LIBRARY}
+	${Boost_FILESYSTEM_LIBRARY})
