--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# https://github.com/ttroy50/cmake-examples/tree/master/01-basic/J-building-with-ninja
+# https://github.com/ttroy50/cmake-examples/tree/master/01-basic/L-cpp-standard/i-common-method
 # Set the minimum version of CMake that can be used
 # To find the cmake version run
 # $ cmake --version
@@ -6,7 +6,18 @@
 cmake_minimum_required(VERSION 2.8.8)
 
 # Project Name:
-project (HelloNinja)
+project (standardFlags)
+
+include (CheckCXXCompilerFlag)
+CHECK_CXX_COMPILER_FLAG ("-std=c++11" COMPILER_SUPPORTS_CXX11)
+
+if (COMPILER_SUPPORTS_CXX11) #
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+elseif (COMPILER_SUPPORTS_CXX0X) #
+    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+else ()
+    message (STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
+endif()
 
 # Add exec:
-add_executable (HelloNinja src/noDepend.cpp)
+add_executable (standardFlags src/noDepend.cpp)
