--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,31 @@
-# https://github.com/ttroy50/cmake-examples/tree/master/01-basic/L-cpp-standard/i-common-method
+# https://github.com/ttroy50/cmake-examples/tree/master/03-code-generation/configure-files
 # Set the minimum version of CMake that can be used
 # To find the cmake version run
 # $ cmake --version
 
-cmake_minimum_required(VERSION 2.8.8)
+cmake_minimum_required(VERSION 3.5.0)
 
-# Project Name:
-project (standardFlags)
+# Set the project name
+project(configExample)
 
-include (CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG ("-std=c++11" COMPILER_SUPPORTS_CXX11)
+# set a project version
+set (cf_example_VERSION_MAJOR 5)
+set (cf_example_VERSION_MINOR 2)
+set (cf_example_VERSION_PATCH 21)
+set (cf_example_VERSION "${cf_example_VERSION_MAJOR}.${cf_example_VERSION_MINOR}.${cf_example_VERSION_PATCH}")
 
-if (COMPILER_SUPPORTS_CXX11) #
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-elseif (COMPILER_SUPPORTS_CXX0X) #
-    SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-else ()
-    message (STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-endif()
+# Call configure files on ver.h.in to set the version.
+# Uses the standard ${VARIABLE} syntax in the file
+configure_file (inc/cmakeIn/ver.h.in ${PROJECT_BINARY_DIR}/myVer.h)
 
-# Add exec:
-add_executable (standardFlags src/noDepend.cpp)
+# configure the path.h.in file.
+# This file can only use the @VARIABLE@ syntax in the file
+configure_file (inc/cmakeIn/path.h.in ${PROJECT_BINARY_DIR}/myPath.h @ONLY)
+
+add_executable (configExample
+    src/main.cpp)
+
+#include directory with the new files
+target_include_directories (configExample
+    PUBLIC
+    ${CMAKE_BINARY_DIR})
