--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,40 @@
-# https://github.com/ttroy50/cmake-examples/tree/master/03-code-generation/configure-files
-# Set the minimum version of CMake that can be used
-# To find the cmake version run
-# $ cmake --version
-
-cmake_minimum_required(VERSION 3.5.0)
+cmake_minimum_required(VERSION 3.5)
 
 # Set the project name
-project(configExample)
+# project (google_test_example)
+project (gTestExample)
 
-# set a project version
-set (cf_example_VERSION_MAJOR 5)
-set (cf_example_VERSION_MINOR 2)
-set (cf_example_VERSION_PATCH 21)
-set (cf_example_VERSION "${cf_example_VERSION_MAJOR}.${cf_example_VERSION_MINOR}.${cf_example_VERSION_PATCH}")
+# Add an library for the example classes
+add_library(gTestExample
+    src/Palin.cpp
+    src/Reverso.cpp
+)
 
-# Call configure files on ver.h.in to set the version.
-# Uses the standard ${VARIABLE} syntax in the file
-configure_file (inc/cmakeIn/ver.h.in ${PROJECT_BINARY_DIR}/myVer.h)
+# link header folder
+target_include_directories (gTestExample
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/inc)
 
-# configure the path.h.in file.
-# This file can only use the @VARIABLE@ syntax in the file
-configure_file (inc/cmakeIn/path.h.in ${PROJECT_BINARY_DIR}/myPath.h @ONLY)
+#############################################
+# Unit tests
 
-add_executable (configExample
-    src/main.cpp)
+add_subdirectory(3rd_party/gTestDir)
 
-#include directory with the new files
-target_include_directories (configExample
-    PUBLIC
-    ${CMAKE_BINARY_DIR})
+# enable CTest testing
+enable_testing()
+
+# Add a testing executable
+add_executable(unitTests src/unit_tests.cpp)
+
+target_link_libraries(unitTests
+    gTestExample
+    GTest::GTest
+    GTest::Main
+    )
+
+# link header folder
+target_include_directories (unitTests
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/inc)
+
+add_test(test_all unitTests)
